hphp/test/slow/like_types/like_casts_wrong_class_reify.php.expectf

Fatal error: Uncaught exception 'TypeAssertionException' with message 'Expected %|{C<int>|C}, got C' in %s/hphp/test/slow/like_types/like_casts_wrong_class_reify.php:8
Stack trace:
#0 {main}
